--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterModify.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegisterModify.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="StoreBackground" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegisterModifyController">
+<AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="521.0" prefWidth="774.0" styleClass="StoreBackground" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegisterModifyController">
     <children>
       <VBox alignment="CENTER" layoutX="-6.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="40.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
          <children>
@@ -27,6 +27,7 @@
                      <children>
                         <MFXTextField fx:id="txtName" floatMode="BORDER" floatingText="Nombre" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
                         <MFXComboBox fx:id="cmbSport" floatingText="Deporte" maxWidth="1.7976931348623157E308" onAction="#OnActionCmbSport" VBox.vgrow="ALWAYS" />
+                        <ImageView fx:id="imgOther" fitHeight="51.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -35,15 +36,12 @@
                   <Separator orientation="VERTICAL" />
                   <VBox alignment="CENTER" layoutX="128.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="25.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <VBox fx:id="hbxImage" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="boxRose" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
+                        <VBox fx:id="hbxImage" alignment="CENTER" styleClass="boxRose">
                            <children>
-                              <ImageView fx:id="mgvImage" pickOnBounds="true" VBox.vgrow="ALWAYS" />
+                              <ImageView fx:id="mgvImage" fitHeight="148.0" fitWidth="153.0" pickOnBounds="true" />
                            </children>
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
                         </VBox>
-                        <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
+                        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="25.0" spacing="20.0" VBox.vgrow="ALWAYS">
                            <children>
                               <MFXButton fx:id="btnSelectImage" onAction="#OnActionBtnSelectImage" text="Seleccionar" HBox.hgrow="ALWAYS" />
                               <MFXButton fx:id="btnPhoto" onAction="#OnActionBtnPhoto" text="Tomar Foto" HBox.hgrow="ALWAYS" />
