--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -67,7 +67,7 @@
          <!-- Botones Inferiores -->
          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
             <MFXButton fx:id="btnCancel" onAction="#OnActionBtnCancel" prefWidth="100.0" text="Cancel" />
-            <MFXButton fx:id="btnStart" onAction="#createTourney" prefWidth="100.0" text="Start" />
+            <MFXButton fx:id="btnStart" onAction="#createTourney" prefWidth="100.0" text="Create" />
          </HBox>
       </VBox>
    </children>
