Modificación de Registro
Despues de agregar el id de sport al Team el registro funciona correctamente

--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Style.css
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Style.css
@@ -103,9 +103,9 @@
     -fx-scale-y: 1.1;
 }
 
-.mfx-button:active{
+/*.mfx-button:active{
      -fx-background-color: #5DEAF1;
-}
+}*/
 
 #btnAccept{
     -fx-background-color: #1AFF1A;
