--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Maintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Maintenance.fxml
@@ -29,10 +29,9 @@
                   <Label fx:id="labTitle" text="Label" />
                </children>
             </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" spacing="5.0" styleClass="boxLightBlue" VBox.vgrow="ALWAYS">
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" spacing="15.0" styleClass="boxLightBlue" VBox.vgrow="ALWAYS">
                <children>
-                  <MFXTextField fx:id="txtNameSearch" floatMode="BORDER" floatingText="Buscar por nombre" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
-                  <ImageView fitHeight="45.0" fitWidth="53.0" onMouseClicked="#OnMouseClickedNameSearch" pickOnBounds="true" preserveRatio="true" styleClass="SearchIcon" />
+                  <MFXTextField fx:id="txtNameSearch" floatMode="BORDER" floatingText="Buscar por nombre" maxWidth="1.7976931348623157E308" onKeyReleased="#OnKeyReleasedNameSearch" HBox.hgrow="ALWAYS" />
                   <MFXComboBox fx:id="cmbSportSearch" floatMode="BORDER" floatingText="Deporte" onAction="#OnActionCmbSportSearch">
                      <HBox.margin>
                         <Insets left="25.0" />
