--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -13,18 +13,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.CreateTourneyController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="600.0" styleClass="StadiumStandBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.CreateTourneyController">
    <children>
       <VBox alignment="CENTER" spacing="25.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
-         <!-- Título -->
-         <Text text="Create Tourney" textAlignment="CENTER">
-            <font>
-               <Font name="Arial" size="24.0" />
-            </font>
+         <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" styleClass="boxLightBlue" VBox.vgrow="ALWAYS">
             <VBox.margin>
                <Insets />
             </VBox.margin>
-         </Text>
+            <children>
+               <!-- Título -->
+               <Text text="Create Tourney" textAlignment="CENTER">
+                  <font>
+                     <Font name="Arial" size="24.0" />
+                  </font>
+               </Text>
+            </children>
+         </HBox>
          <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="100.0" spacing="25.0" VBox.vgrow="ALWAYS">
             <children>
       
@@ -44,22 +48,28 @@
 
          <!-- Selector de Cantidad de Equipos -->
          <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="30.0" spacing="10.0" VBox.vgrow="ALWAYS">
-            <Text text="Select the number of teams (between 32 and 64):" />
+            <Text text="Select the number of teams (between 2 and 64):" />
             <MFXSlider fx:id="sliderTeamCount" max="64" min="32" prefWidth="300.0" value="32" />
 
             
              </VBox>
          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="30.0" VBox.vgrow="ALWAYS">
             <children>
-               <TableView fx:id="tblTeams" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="250.0" prefWidth="400.0">
+               <TableView fx:id="tblTeams" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="TableViewLightdBlue" HBox.hgrow="ALWAYS">
                   <columns>
                      <TableColumn fx:id="colTeamName" prefWidth="259.0" text="Equipos disponibles" />
                   </columns>
+                  <padding>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </padding>
                </TableView>
-               <TableView fx:id="tblTeams1" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="250.0" prefWidth="400.0">
+               <TableView fx:id="tblTeams1" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="TableViewRose" HBox.hgrow="ALWAYS">
                   <columns>
                      <TableColumn fx:id="colTeamName1" prefWidth="259.0" text="Equipos Elegidos" />
                   </columns>
+                  <padding>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </padding>
                </TableView>
             </children>
          </HBox>
