--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/ViewTourneys.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/ViewTourneys.fxml
@@ -12,11 +12,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.ViewTourneysController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="StoreBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.ViewTourneysController">
    <children>
-      <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <VBox alignment="TOP_CENTER" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
-            <Label text="Ver Torneos" />
+            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" styleClass="boxLightBlue" VBox.vgrow="ALWAYS">
+               <children>
+                  <Label text="Ver Torneos" />
+               </children>
+            </HBox>
             <VBox alignment="CENTER">
                <children>
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
@@ -29,20 +33,24 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </VBox>
-            <HBox alignment="CENTER" spacing="15.0">
+            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" spacing="15.0" styleClass="boxRose" VBox.vgrow="ALWAYS">
                <children>
                   <Label text="Seleccione un tipo de deporte" />
                   <MFXComboBox fx:id="comboDeportes" onAction="#mostrarTorneos" prefWidth="150.0" text="Deportes" />
                </children>
             </HBox>
             <!-- Tabla oculta -->
-            <TableView fx:id="tablaTorneos" prefHeight="150.0" prefWidth="500.0" visible="false">
+            <TableView fx:id="tablaTorneos" prefHeight="150.0" prefWidth="500.0" styleClass="boxLightBlue" visible="false">
                <columns>
                   <TableColumn fx:id="colTorneo" prefWidth="300.0" text="Torneo" />
                   <TableColumn fx:id="colEstado" prefWidth="200.0" text="Estado" />
                </columns>
             </TableView>
-             <MFXButton fx:id="btnBack" onAction="#goBack" text="Volver" />
+            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" VBox.vgrow="ALWAYS">
+               <children>
+                   <MFXButton fx:id="btnBack" onAction="#goBack" text="Volver" />
+               </children>
+            </HBox>
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
