--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Style.css
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Style.css
@@ -29,9 +29,10 @@
 .LobbyBackground,
 .GameBackground{
     -fx-background-repeat: no-repeat;
-    -fx-background-size: cover;
+    -fx-background-size: 100% 100%;
     -fx-background-position: center center;
     -fx-preserve-ratio: true;
+    
 }
 
 .CameraIcon {
