--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/ViewTourneys.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/ViewTourneys.fxml
@@ -2,7 +2,6 @@
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import io.github.palexdev.materialfx.controls.MFXComboBox?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -14,47 +13,68 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="StoreBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.ViewTourneysController">
    <children>
-      <VBox alignment="TOP_CENTER" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+      
+      <VBox fx:id="mainContainer" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
-            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" styleClass="boxLightBlue" VBox.vgrow="ALWAYS">
+          
+            <HBox alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="39.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/LobbyIcon.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            
+            <HBox alignment="CENTER" prefHeight="50.0" styleClass="boxLightBlue">
                <children>
                   <Label text="Ver Torneos" />
                </children>
             </HBox>
-            <VBox alignment="CENTER">
+            
+            <VBox fx:id="imgTrophey" alignment="CENTER">
                <children>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="107.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../resources/trophy.png" />
                      </image>
                   </ImageView>
                </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
             </VBox>
-            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" spacing="15.0" styleClass="boxRose" VBox.vgrow="ALWAYS">
+            <HBox alignment="CENTER" prefHeight="50.0" spacing="40.0" styleClass="boxRose">
                <children>
                   <Label text="Seleccione un tipo de deporte" />
                   <MFXComboBox fx:id="comboDeportes" onAction="#mostrarTorneos" prefWidth="150.0" text="Deportes" />
                </children>
             </HBox>
-            <!-- Tabla oculta -->
+            
             <TableView fx:id="tablaTorneos" prefHeight="150.0" prefWidth="500.0" styleClass="boxLightBlue" visible="false">
                <columns>
                   <TableColumn fx:id="colTorneo" prefWidth="300.0" text="Torneo" />
                   <TableColumn fx:id="colEstado" prefWidth="200.0" text="Estado" />
                </columns>
             </TableView>
-            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="50.0" VBox.vgrow="ALWAYS">
+            <HBox alignment="CENTER" prefHeight="50.0" spacing="70.0">
                <children>
-                   <MFXButton fx:id="btnBack" onAction="#goBack" text="Volver" />
+                  <MFXButton fx:id="btnBack" onAction="#goBack" text="Refrescar">
+                     <graphic>
+                        <ImageView fitHeight="39.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </MFXButton>
+                  <MFXButton fx:id="btnInfo" onAction="#showInfo" text="Informacion">
+                     <graphic>
+                        <ImageView fitHeight="39.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </MFXButton>
+                  <MFXButton fx:id="btnPlay" onAction="#goPlay" text="Jugar">
+                     <graphic>
+                        <ImageView fitHeight="39.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </MFXButton>
                </children>
             </HBox>
          </children>
-         <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </padding>
       </VBox>
    </children>
 </AnchorPane>
