--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TourneysInfo.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TourneysInfo.fxml
@@ -11,178 +11,134 @@
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.TourneysInfoController">
-   <!-- Contenedor principal -->
    <StackPane AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
-      <!-- Fondo general (opcional, puedes usar un fondo oscuro como en Celeste) -->
-      <ImageView fx:id="background" fitHeight="600" fitWidth="800" preserveRatio="true">
+      <ImageView fitHeight="600" fitWidth="800" preserveRatio="true">
          <image>
             <Image url="@../resources/StadiumStandBackground.jpg" />
          </image>
       </ImageView>
-
-      <!-- Contenedor para centrar los tickets -->
       <StackPane maxHeight="400" maxWidth="600" AnchorPane.bottomAnchor="50" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="50">
-         <!-- Ticket Inferior (ticketBackground1) -->
          <StackPane fx:id="ticketInferior" onMouseClicked="#slideBackTicket">
-            <ImageView fx:id="ticketBackground1" fitHeight="400" fitWidth="600" preserveRatio="true">
+            <ImageView fitHeight="400" fitWidth="600" preserveRatio="true">
                <image>
                   <Image url="@../resources/tiqueteInterno.jpg" />
                </image>
             </ImageView>
-            <VBox alignment="TOP_CENTER" style="-fx-background-color: transparent;">
-               <children>
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" VBox.vgrow="ALWAYS" />
-                  <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" HBox.hgrow="ALWAYS">
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
-                        </VBox>
-                        <VBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" HBox.hgrow="ALWAYS">
-                           <children>
-                              <HBox alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="200.0" VBox.vgrow="ALWAYS">
-                                 <children>
-                                    <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="8.0" HBox.hgrow="ALWAYS">
-                                       <children>
-                                          <HBox alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="101.0" spacing="10" VBox.vgrow="ALWAYS">
-                                             <children>
-                                                <ImageView fitHeight="63.0" fitWidth="60.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../resources/estrella.png" />
-                                                   </image>
-                                                </ImageView>
-                                                <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Ganador:" HBox.hgrow="ALWAYS" />
-                                                <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Team" HBox.hgrow="ALWAYS" />
-                                                <MFXButton text="Certificado">
-                                                   <graphic>
-                                                      <ImageView fitHeight="44.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                                                         <image>
-                                                            <Image url="@../resources/Impresora.png" />
-                                                         </image>
-                                                      </ImageView>
-                                                   </graphic>
-                                                </MFXButton>
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
-                                             <children>
-                                                <ImageView fitHeight="44.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../resources/ajedrez.png" />
-                                                   </image>
-                                                </ImageView>
-                                                <Label alignment="CENTER" text="Equipos" />
-                                                <Label fx:id="lblRondas1" text="Cantidad" />
-                                                <MFXButton text="Ver Equipos">
-                                                   <graphic>
-                                                      <ImageView fitHeight="38.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-                                                         <image>
-                                                            <Image url="@../resources/lupa.png" />
-                                                         </image>
-                                                      </ImageView>
-                                                   </graphic>
-                                                </MFXButton>
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
-                                             <children>
-                                                <ImageView fitHeight="43.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../resources/TroupheyWithKeys.png" />
-                                                   </image>
-                                                </ImageView>
-                                                <Label alignment="CENTER" text="Rounds" />
-                                                <Label fx:id="lblRondas11" text="Cantidad" />
-                                                <MFXButton text="Ver Llaves">
-                                                   <graphic>
-                                                      <ImageView fitHeight="38.0" fitWidth="54.0" pickOnBounds="true" preserveRatio="true">
-                                                         <image>
-                                                            <Image url="@../resources/lupa.png" />
-                                                         </image>
-                                                      </ImageView>
-                                                   </graphic>
-                                                </MFXButton>
-                                             </children>
-                                          </HBox>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
+            <VBox alignment="CENTER" spacing="20" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
+               <padding>
+                  <Insets bottom="20" left="20" right="20" top="20" />
+               </padding>
+               <HBox alignment="CENTER" spacing="30">
+                  <VBox styleClass="StarIcon" stylesheets="@Style.css">
+                     <ImageView fitHeight="60" fitWidth="60" preserveRatio="true">
+                        <image>
+                           <Image url="@../resources/estrella.png" />
+                        </image>
+                     </ImageView>
                   </VBox>
-               </children>
+                  <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Ganador:" />
+                  <Label fx:id="lblWinner" styleClass="SmallLabel" stylesheets="@Style.css" text="Team" />
+                  <MFXButton fx:id="btnShowCertificate" stylesheets="@Style.css" text="Certificado">
+                     <graphic>
+                        <VBox styleClass="InteractiveVBox">
+                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true">
+                              <image>
+                                 <Image url="@../resources/Impresora.png" />
+                              </image>
+                           </ImageView>
+                        </VBox>
+                     </graphic>
+                  </MFXButton>
+               </HBox>
+               <HBox alignment="CENTER" spacing="30">
+                  <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
+                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                        <image>
+                           <Image url="@../resources/ajedrez.png" />
+                        </image>
+                     </ImageView>
+                  </VBox>
+                  <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Equipos:" />
+                  <Label fx:id="lblTeams" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
+                  <MFXButton fx:id="btnShowTeams" styleClass="mfx-button" stylesheets="@Style.css" text="Ver Equipos">
+                     <graphic>
+                        <VBox styleClass="InteractiveVBox">
+                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true">
+                              <image>
+                                 <Image url="@../resources/lupa.png" />
+                              </image>
+                           </ImageView>
+                        </VBox>
+                     </graphic>
+                  </MFXButton>
+               </HBox>
+               <HBox alignment="CENTER" spacing="30">
+                  <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
+                     <ImageView fitHeight="50" fitWidth="50" preserveRatio="true">
+                        <image>
+                           <Image url="@../resources/TroupheyWithKeys.png" />
+                        </image>
+                     </ImageView>
+                  </VBox>
+                  <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Rounds:" />
+                  <Label fx:id="lblRounds" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
+                  <MFXButton fx:id="btnShowKeys" styleClass="mfx-button" stylesheets="@Style.css" text="Ver Llaves">
+                     <graphic>
+                        <VBox styleClass="InteractiveVBox">
+                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true">
+                              <image>
+                                 <Image url="@../resources/lupa.png" />
+                              </image>
+                           </ImageView>
+                        </VBox>
+                     </graphic>
+                  </MFXButton>
+               </HBox>
             </VBox>
          </StackPane>
-
-                        <!-- Ticket Superior (ticketBackground) -->
          <StackPane fx:id="ticketSuperior" onMouseClicked="#slideTicket">
-            <ImageView fx:id="ticketBackground" fitHeight="400" fitWidth="600" preserveRatio="true">
+            <ImageView fitHeight="400" fitWidth="600" preserveRatio="true">
                <image>
                   <Image url="@../resources/tiqueteMejorad.jpg" />
                </image>
             </ImageView>
-            <VBox alignment="TOP_CENTER" style="-fx-background-color: transparent;">
-               <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" VBox.vgrow="ALWAYS" />
-               <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                  <children>
-                     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" HBox.hgrow="ALWAYS">
-                        <HBox.margin>
-                           <Insets />
-                        </HBox.margin>
-                     </VBox>
-                     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" HBox.hgrow="ALWAYS">
-                        <children>
-                           <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="90.0" VBox.vgrow="ALWAYS">
-                              <ImageView fitHeight="110.0" fitWidth="153.0" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../resources/trophy.png" />
-                                 </image>
-                              </ImageView>
-                              <VBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="105.0" spacing="18" HBox.hgrow="ALWAYS">
-                                 <HBox alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" prefWidth="101.0" spacing="2.0" VBox.vgrow="ALWAYS">
-                                    <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre: " HBox.hgrow="ALWAYS" />
-                                    <Label fx:id="lblPuntos" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="TourneyName" HBox.hgrow="ALWAYS" />
-                                 </HBox>
-                                 <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" spacing="10" VBox.vgrow="ALWAYS">
-                                    <Label text="Estado: " />
-                                    <Label fx:id="lblRondas" text="State" />
-                                 </HBox>
-                              </VBox>
-                           </HBox>
-                           <HBox alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" spacing="10.0" VBox.vgrow="ALWAYS">
-                              <VBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="85.0" prefWidth="106.0" HBox.hgrow="ALWAYS" />
-                              <ImageView fitHeight="45.0" fitWidth="57.0" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../resources/time-and-date.png" />
-                                 </image>
-                              </ImageView>
-                              <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="77.0" prefWidth="89.0" text="Minutes: " HBox.hgrow="ALWAYS" />
-                              <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="85.0" prefWidth="90.0" text="Time" HBox.hgrow="ALWAYS" />
-                           </HBox>
-                        </children>
-                     </VBox>
-                     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" HBox.hgrow="ALWAYS" />
-                  </children>
+            <VBox alignment="CENTER" spacing="30" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
+               <padding>
+                  <Insets bottom="20" left="20" right="20" top="20" />
+               </padding>
+               <HBox alignment="CENTER" spacing="40">
+                  <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
+                     <ImageView fitHeight="100" fitWidth="100" preserveRatio="true">
+                        <image>
+                           <Image url="@../resources/trophy.png" />
+                        </image>
+                     </ImageView>
+                  </VBox>
+                  <VBox alignment="CENTER" spacing="15">
+                     <HBox alignment="CENTER" spacing="10">
+                        <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Nombre:" />
+                        <Label fx:id="lblTourney" styleClass="SmallLabel" stylesheets="@Style.css" text="TourneyName" />
+                     </HBox>
+                     <HBox alignment="CENTER" spacing="10">
+                        <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Estado:" />
+                        <Label fx:id="lblState" styleClass="SmallLabel" stylesheets="@Style.css" text="State" />
+                     </HBox>
+                  </VBox>
                </HBox>
-               <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="0.0" VBox.vgrow="ALWAYS">
-                  <VBox.margin>
-                     <Insets />
-                  </VBox.margin>
-               </VBox>
+               <HBox alignment="CENTER" spacing="20">
+                  <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
+                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                        <image>
+                           <Image url="@../resources/time-and-date.png" />
+                        </image>
+                     </ImageView>
+                  </VBox>
+                  <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Minutes:" />
+                  <Label fx:id="lblTime" styleClass="SmallLabel" stylesheets="@Style.css" text="Time" />
+               </HBox>
             </VBox>
          </StackPane>
       </StackPane>
    </StackPane>
-
-   <!-- Back Button, positioned outside the ticket area -->
-   <MFXButton fx:id="btnBack" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goBack" text="Volver" AnchorPane.bottomAnchor="30" AnchorPane.leftAnchor="30" AnchorPane.topAnchor="395.33333333333337" />
+   <MFXButton fx:id="btnBack" onAction="#goBack" text="Volver" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="20" />
 </AnchorPane>
